  logging jars are now in example/lib/ext. If you are using another webapp 
  container, these jars will need to go in the corresponding location for that 
  container. Changing logging impls is now as easy as updating the jars in this 
  folder with those necessary for the logging impl you would like. For more 
  details, see the Slf4j documentation.

Detailed Change List
----------------------

New Features
----------------------

* SOLR-4196 (and others). Solr.xml is being deprecated in favor of a simple
  properties file. In the absence of a <solr_home>/solr.xml but the presence of
  <solr_home>/solr.properties, two things will happen
  1> The attributes that, in the solr.xml file, were in the <solr> and <cores> tags will
      be read from the solr.properties
  2> The <solr_home> will be walked and any cores fond will be discovered, which will
     be inferred by the presence of a "core.properties" file which will contain the 
     data formerly in the individual <core> tags. The implication here is that there will
     be no individual core information in the solr.properties file.
  See the discussion on the wiki page titled "Core Discovery (4.3 and beyond)" for
  the formats of both solr.properties and the individual core.properties files
  (Erick Erickson)
  
* SOLR-4623: Provide REST API read access to all elements of the live schema.
  Add a REST API request to return the entire live schema, in JSON, XML, and
  schema.xml formats.  Move REST API methods from package org.apache.solr.rest
  to org.apache.solr.rest.schema, and rename base functionality REST API
  classes to remove the current schema focus, to prepare for other non-schema
  REST APIs.  Change output path for copyFields and dynamicFields from
  "copyfields" and "dynamicfields" (all lowercase) to "copyFields" and
  "dynamicFields", respectively, to align with all other REST API outputs, which
  use camelCase.
  (Steve Rowe)

Bug Fixes
----------------------
