@@ -338,18 +338,7 @@
   
   <target name="dist"
           description="Creates the Solr distribution files."
-          depends="-dist-common, dist-war" />
- 
-  <target name="dist-excl-slf4j"
-          description="Creates the Solr distribution files without slf4j API or bindings."
-          depends="-dist-common" />
- 
-  <target name="-dist-common"
-          depends="dist-solrj, dist-core, dist-test-framework, dist-contrib">
-    <!-- Targets common to dist and dist-excl-slf4j.
-         Only usable as a dependency
-    -->
-  </target>
+          depends="dist-solrj, dist-core, dist-test-framework, dist-contrib, dist-war" />
  
   <target name="dist-test-framework" depends="init-dist"
           description="Creates the Solr test-framework JAR.">
